--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/GroceryMarketPlace.Web.csproj
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/GroceryMarketPlace.Web.csproj
@@ -9,13 +9,27 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Identity" Version="1.12.0" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.21.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.7" />
+        <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.4" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
+        <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.0.1" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Components\" />
       <Folder Include="Pages\" />
       <Folder Include="Services\" />
-      <Folder Include="Shared\" />
+      <Folder Include="wwwroot\css\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GroceryMarketPlace.DataAccess\GroceryMarketPlace.DataAccess.csproj" />
+      <ProjectReference Include="..\GroceryMarketPlace.Domain\GroceryMarketPlace.Domain.csproj" />
     </ItemGroup>
 </Project>
