--- a/GroceryMarketPlace/src/GroceryMarketPlace.API/appsettings.json
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.API/appsettings.json
@@ -6,59 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DBConnection": "Server=grocery_marketplace_mssql;Database=GroceryMarketplaceDB;User Id=SA;Password=Admin@123",
-    "RedisCache": "rediscache:6379,abortConnect=false"
-  },
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.File"
-    ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "/logs/log-.txt",
-          "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true,
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
-        }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ]
-  },
-  "TokenSettings": {
-    "SecretKey": "58ded5b0-3fbb-4502-a694-ea831b1fe020",
-    "ExpirationInMinutes": "1440"
-  },
-  "AWS": {
-    "Profile": "default",
-    "Region": "us-east-1"
-  },
-  "EmailSettings": {
-    "FromEmail": "hieu.ngo@asnet.com.vn"
-  },
-  "CacheSettings": {
-    "SlidingExpirationInMinutes": 60,
-    "AbsoluteExpirationInMinutes": 60,
-    "Redis": {
-      "Host": "localhost",
-      "Port": 6379
-    }
+  "AzureAdB2C": {
+    "Instance": "https://grocerymarketplacedev.b2clogin.com/",
+    "ClientId": "c3e95b94-ac44-4ecc-8466-1238977cea9e",
+    "CallbackPath": "/signin-oidc",
+    "Domain": "grocerymarketplacedev.onmicrosoft.com",
+    "SignedOutCallbackPath": "/signout/B2C_1_susi",
+    "SignUpSignInPolicyId": "B2C_1_SignUpIn",
+    "ResetPasswordPolicyId": "",
+    "EditProfilePolicyId": ""
   }
 }
