--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/appsettings.json
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/appsettings.json
@@ -1,27 +1,13 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://dotazure002.b2clogin.com/tfp/",
-    "ClientId": "7d094931-dd9f-4813-ac97-14aeb9b2507d",
+    "Instance": "https://grocerymarketplacedev.b2clogin.com/tfp/",
+    "ClientId": "c3e95b94-ac44-4ecc-8466-1238977cea9e",
     "CallbackPath": "/signin-oidc",
-    "Domain": "dotazure002.onmicrosoft.com",
+    "Domain": "grocerymarketplacedev.onmicrosoft.com",
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
     "SignUpSignInPolicyId": "B2C_1_SignUpIn",
     "ResetPasswordPolicyId": "",
-    "ClientSecret": "9uR8Q~72lDUvX_WPwCx02WizCDNIZBOQtsZuLa5D",
     "EditProfilePolicyId": ""
-  },
-  "ReviewApi": {
-    "Scopes": "https://dotazure002.onmicrosoft.com/47542266-a8ac-415a-bfec-a73d5c1eb0ff/access_as_user"
-  },
-  "Cdn": {
-    "Endpoint": "https://cdne-dotazure-002.azureedge.net"
-  },
-  "Api": {
-    "ReviewEndpoint": "https://localhost:7169",
-    "ProductEndpoint": "https://localhost:7169"
-  },
-  "Storage": {
-    "Endpoint": "https://stdotazureeastus002.blob.core.windows.net"
   },
   "Logging": {
     "LogLevel": {
