Update auth api

--- a/GroceryMarketPlace/src/GroceryMarketPlace.API/appsettings.json
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.API/appsettings.json
@@ -7,13 +7,10 @@
   },
   "AllowedHosts": "*",
   "AzureAdB2C": {
-    "Instance": "https://grocerymarketplacedev.b2clogin.com/",
-    "ClientId": "c3e95b94-ac44-4ecc-8466-1238977cea9e",
-    "CallbackPath": "/signin-oidc",
-    "Domain": "grocerymarketplacedev.onmicrosoft.com",
-    "SignedOutCallbackPath": "/signout/B2C_1_susi",
-    "SignUpSignInPolicyId": "B2C_1_SignUpIn",
-    "ResetPasswordPolicyId": "",
-    "EditProfilePolicyId": ""
+    "Instance": "https://grocerymarketplacedev001.b2clogin.com/tfp/",
+    "ClientId": "b7b83d42-4481-4961-869d-367f93c09ea0",
+    "Domain": "grocerymarketplacedev001.onmicrosoft.com",
+    "Scopes": "access_as_user",
+    "SignUpSignInPolicyId": "B2C_1_Auth"
   }
 }
