--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/appsettings.Development.json
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Api": {
+    "ReviewEndpoint": "https://localhost:7169",
+    "ProductEndpoint": "https://localhost:7169"
   }
 }
