--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/appsettings.json
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/appsettings.json
@@ -1,13 +1,17 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://grocerymarketplacedev.b2clogin.com/tfp/",
-    "ClientId": "c3e95b94-ac44-4ecc-8466-1238977cea9e",
+    "Instance": "https://grocerymarketplacedev001.b2clogin.com/tfp/",
+    "ClientId": "f48e5bca-680e-48ff-bafc-c3aa810317d7",
     "CallbackPath": "/signin-oidc",
-    "Domain": "grocerymarketplacedev.onmicrosoft.com",
+    "Domain": "grocerymarketplacedev001.onmicrosoft.com",
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
-    "SignUpSignInPolicyId": "B2C_1_SignUpIn",
+    "SignUpSignInPolicyId": "B2C_1_Auth",
     "ResetPasswordPolicyId": "",
+    "ClientSecret": "ytm8Q~ozczbNFA5I5sCt.kP7hGYh_DyGCAjVEaVm",
     "EditProfilePolicyId": ""
+  },
+  "ReviewApi": {
+    "Scopes": "https://grocerymarketplacedev001.onmicrosoft.com/b7b83d42-4481-4961-869d-367f93c09ea0/access_as_user"
   },
   "Logging": {
     "LogLevel": {
